...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/deleteImg"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/baseline_delete_black_48"
        android:tint="@color/colorPrimary"
...
